--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -4,7 +4,7 @@
     "error": "Error",
     "search": "Search for a market",
     "connectWallet": "Connect Wallet",
-    "poweredBy": "Powered by 0G Newton Testnet",
+    "poweredBy": "Powered by Sui Testnet",
     "theme": {
       "light": "Light mode",
       "dark": "Dark mode",
