--- a/frontend/src/locales/zh/translation.json
+++ b/frontend/src/locales/zh/translation.json
@@ -4,7 +4,7 @@
     "error": "错误",
     "search": "搜索市场",
     "connectWallet": "连接钱包",
-    "poweredBy": "Powered by 0G Newton Testnet",
+    "poweredBy": "Powered by Sui Testnet",
     "theme": {
       "light": "浅色模式",
       "dark": "深色模式",
